--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start",
     "seed": "node -r dotenv/config ./scripts/seed.js",
-    "query": "node -r dotenv/config ./scripts/query.js"
+    "query": "node -r dotenv/config ./scripts/query.js",
+    "lint": "next lint"
+
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
